--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 5000
 DB_URI = mongodb+srv://hossein1881:wfgIVQUlO4POAtRM@cluster0.ypeo9.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET= 123456
+NODE_ENV= development
